--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -39,7 +41,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "ionicons": "^3.0.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   }
 }
