--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "tooltip.js": "^1.1.7"
   }
 }
