--- a/package.json
+++ b/package.json
@@ -1,51 +1,23 @@
 {
-  "name": "edele",
+  "name": "Elune",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server ",
-    "build:prod": "webpack -p"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GreenHornedOwl/Edele.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GreenHornedOwl/Edele/issues"
-  },
-  "homepage": "https://github.com/GreenHornedOwl/Edele#readme",
-  "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.6.0",
-    "postcss-loader": "^2.0.8",
-    "precss": "^2.0.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
-  },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
-    "ionicons": "^3.0.0",
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.9",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "tooltip.js": "^1.1.7"
-  }
+    "lit-element": "^2.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/runtime-corejs2": "^7.12.1",
+    "parcel": "^2.0.0-beta.1",
+    "rimraf": "^3.0.2",
+    "sass": "^1.27.0"
+  },
+  "scripts": {
+    "start": "parcel serve ./src/index.html"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
