--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "lazysizes": "^5.2.2",
     "lit-element": "^2.4.0"
   },
   "devDependencies": {
